--- a/resources/css/layout/common.scss
+++ b/resources/css/layout/common.scss
@@ -14,3 +14,10 @@ header {
     margin-top: 30px;
     margin-bottom: 30px;
 }
+
+#modal-loading {
+    .modal-content {
+        text-align: center;
+        padding: 20px
+    }
+}
